<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:paddingHorizontal="32dp"
    tools:context=".SplashActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="191dp"
        android:layout_height="167dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_logo_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.4" />

    <!-- Title -->
    <TextView
        android:id="@+id/titleTextView"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintBottom_toTopOf="@+id/sloganTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Slogan -->
    <TextView
        android:id="@+id/sloganTextView"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/splash_slogan"
        android:textAlignment="center"
        android:textColor="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- "Let's Get Started" Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_brand"
        android:paddingVertical="14dp"
        android:text="@string/splash_get_started"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="12dp"


    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="48dp"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>

